simple/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: llm-demo
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - llm-demo.local

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: llm-demo
spec:
  hosts:
  - llm-demo.local
  gateways:
    - llm-demo
  http:
  - route:
    - destination:
        host: nginx-file-server-svc
